<resources>
    <string name="app_name">Your Financial</string>
    <string name="button_add_transaction_content_description">button add transaction</string>
    <string name="welcome">Welcome</string>
    <string name="your_balance">your balance:</string>
    <string name="icon_revenue_content_description">icon revenue</string>
    <string name="revenue">Revenue</string>
    <string name="dummy_amount">Rp 5.000.000</string>
    <string name="icon_expanse_content_description">icon expanse</string>
    <string name="expanse">Expanse</string>
    <string name="transaction">Transaction</string>
    <string name="stock">Stock</string>
    <string name="profile">Profile</string>
    <string name="dummy_title_item">Netflix subscription</string>
    <string name="dummy_status_item">LUNAS</string>
    <string name="notes">notes</string>
    <string name="button_expand_content_description">button expand</string>
    <string name="dummy_note">Membeli langganan netflix selama satu bulan</string>
    <string name="rp_0">Rp. 0</string>
    <string name="this_is_image">this is image</string>
    <string name="input_amount">Input amount</string>
    <string name="input_title">Input title</string>
    <string name="select_a_type">Select a type</string>
    <string name="select_a_status">Select a status</string>
    <string name="belum_lunas">Belum Lunas</string>
    <string name="lunas">Lunas</string>
    <string name="save">save</string>
    <string name="error_empty_input_amount">Input amount cannot be empty</string>
    <string name="error_empty_input_title">Input title cannot be empty</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="app">App</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>