<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_50_transaction_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tools_tv_welcome_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tools_tv_your_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/your_balance"
        app:layout_constraintStart_toStartOf="@id/tools_tv_welcome_transaction"
        app:layout_constraintTop_toBottomOf="@id/tools_tv_welcome_transaction" />

    <TextView
        android:id="@+id/tv_your_balance_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tools_tv_your_balance"
        app:layout_constraintStart_toEndOf="@id/tools_tv_your_balance"
        app:layout_constraintTop_toTopOf="@id/tools_tv_your_balance"
        android:text="@string/rp_0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_50_transaction_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_balance_transaction">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_500">

            <ImageView
                android:id="@+id/tools_icon_revenue_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_revenue_content_description"
                app:tint="@color/white"
                android:src="@drawable/ic_revenue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tools_tv_revenue_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/revenue"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tools_icon_revenue_transaction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tools_icon_revenue_transaction"
                app:layout_constraintTop_toTopOf="@+id/tools_icon_revenue_transaction" />

            <TextView
                android:id="@+id/tv_total_revenue_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tools_icon_revenue_transaction"
                app:layout_constraintTop_toBottomOf="@+id/tools_icon_revenue_transaction"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/rp_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_revenue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_50_transaction_overview"
        app:layout_constraintTop_toBottomOf="@id/tv_your_balance_transaction">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red_500">

            <ImageView
                android:id="@+id/tools_icon_expanse_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:tint="@color/white"
                android:contentDescription="@string/icon_expanse_content_description"
                android:src="@drawable/ic_expense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tools_tv_expanse_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/expanse"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tools_icon_expanse_transaction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tools_icon_expanse_transaction"
                app:layout_constraintTop_toTopOf="@+id/tools_icon_expanse_transaction" />

            <TextView
                android:id="@+id/tv_total_expanse_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tools_icon_expanse_transaction"
                app:layout_constraintTop_toBottomOf="@+id/tools_icon_expanse_transaction"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/rp_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rectangle_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_expense" />

</androidx.constraintlayout.widget.ConstraintLayout>